# youtube-streaming-bot

./: pyproject.toml
src/: main.py
src/helpers/: helpers.py
